add downcast mapping for parser classes that extend other parserContexts