@@ -9,18 +9,21 @@ import com.github.javaparser.ast.body.ClassOrInterfaceDeclaration;
 import com.github.javaparser.ast.body.MethodDeclaration;
 import com.github.javaparser.ast.comments.Comment;
 import com.github.javaparser.ast.comments.JavadocComment;
+import com.github.javaparser.ast.expr.NormalAnnotationExpr;
 import com.github.javaparser.ast.type.ClassOrInterfaceType;
 import com.google.common.base.CaseFormat;
 import org.jqassistant.contrib.plugin.antlr2jqassistant.TreeHelper;
 import org.jqassistant.contrib.plugin.antlr2jqassistant.generate.base.BaseGenerator;
 import org.jqassistant.contrib.plugin.antlr2jqassistant.model.FormattedName;
 import org.jqassistant.contrib.plugin.antlr2jqassistant.model.GenerationConfig;
+import org.jqassistant.contrib.plugin.antlr2jqassistant.model.ModelDto;
 import org.snt.inmemantlr.GenericParser;
 import org.snt.inmemantlr.memobjects.MemorySource;
 
 import java.io.File;
 import java.util.*;
-import java.util.stream.Collectors;
+
+import static org.jqassistant.contrib.plugin.antlr2jqassistant.model.FormattedName.QUOTES;
 
 public class ApiModelGenerator extends BaseGenerator {
     public final static String TERMINAL_NODE_CLASS = "TerminalNodeStrings";
@@ -44,12 +47,12 @@ public class ApiModelGenerator extends BaseGenerator {
         return javaParser.parse(antlrParser.openInputStream()).getResult().orElseThrow();
     }
 
-    public Map<FormattedName, CompilationUnit> generate() {
+    public Map<FormattedName, ModelDto> generate() {
         CompilationUnit compilationUnit = getCompilationUnit();
         ClassOrInterfaceDeclaration parser = compilationUnit.getClassByName(antlrParser.getClassName()).orElseThrow();
         List<ClassOrInterfaceDeclaration> classes = getContextClasses(parser);
 
-        Map<FormattedName, CompilationUnit> list = new TreeMap<>(getTerminalNode());
+        Map<FormattedName, ModelDto> list = new TreeMap<>(getTerminalNode());
         classes.forEach(clazz -> list.putAll(generateInterface(clazz)));
         return list;
     }
@@ -59,7 +62,7 @@ public class ApiModelGenerator extends BaseGenerator {
         for (Node node : parser.getChildNodes()) {
             if (node instanceof ClassOrInterfaceDeclaration) {
                 NodeList<ClassOrInterfaceType> extendedTypes = ((ClassOrInterfaceDeclaration) node).getExtendedTypes();
-                if (extendedTypes.getFirst().isPresent() && extendedTypes.getFirst().get().getName().getIdentifier().equals("ParserRuleContext")) {
+                if (extendedTypes.getFirst().isPresent() && extendedTypes.getFirst().get().getName().getIdentifier().contains("Context")) {
                     classes.add((ClassOrInterfaceDeclaration) node);
                 }
             }
@@ -67,7 +70,7 @@ public class ApiModelGenerator extends BaseGenerator {
         return classes;
     }
 
-    private Map<FormattedName, CompilationUnit> getTerminalNode() {
+    private Map<FormattedName, ModelDto> getTerminalNode() {
         CompilationUnit compilationUnit = new CompilationUnit();
         compilationUnit.setPackageDeclaration(getPackageName());
         compilationUnit.addImport(baseDescriptorGenerator.getPackageName() + "." + baseDescriptorGenerator.BASE_DESCRIPTOR_NAME.getName());
@@ -90,12 +93,15 @@ public class ApiModelGenerator extends BaseGenerator {
         createGetterAndSetter(interfaceDeclaration, new FormattedName("StartIndex"), "String");
         createGetterAndSetter(interfaceDeclaration, new FormattedName("StopIndex"), "String");
 
-        Map<FormattedName, CompilationUnit> map = new TreeMap<>();
-        map.put(name, compilationUnit);
+        Map<FormattedName, ModelDto> map = new TreeMap<>();
+        map.put(name, new ModelDto(compilationUnit));
         return map;
     }
 
-    private Map<FormattedName, CompilationUnit> generateInterface(ClassOrInterfaceDeclaration clazz) {
+    private Map<FormattedName, ModelDto> generateInterface(ClassOrInterfaceDeclaration clazz) {
+        List<FormattedName> explicitNameMapping = new ArrayList<>();
+        FormattedName extendsModel = null;
+
         FormattedName name = new FormattedName(clazz.getName());
 
         CompilationUnit compilationUnit = new CompilationUnit();
@@ -103,9 +109,14 @@ public class ApiModelGenerator extends BaseGenerator {
         compilationUnit.addImport(baseDescriptorGenerator.getPackageName() + "." + baseDescriptorGenerator.BASE_DESCRIPTOR_NAME.getName());
         compilationUnit.addOrphanComment(generateComment(clazz));
         ClassOrInterfaceDeclaration interfaceDeclaration = compilationUnit
-                .addInterface(name.getName())
-                .addExtendedType(baseDescriptorGenerator.BASE_DESCRIPTOR_NAME.getName());
-        TreeHelper.addGeneratedAnnotation(interfaceDeclaration, this.getClass().getName());
+                .addInterface(name.getName());
+        if (clazz.getExtendedTypes().get(0).getName().getIdentifier().equals("ParserRuleContext")) {
+            interfaceDeclaration.addExtendedType(baseDescriptorGenerator.BASE_DESCRIPTOR_NAME.getName());
+        } else {
+            extendsModel = new FormattedName(clazz.getExtendedTypes().get(0).getName());
+            interfaceDeclaration.addExtendedType(extendsModel.getName());
+        }
+        NormalAnnotationExpr generatedAnnotation = TreeHelper.addGeneratedAnnotation(interfaceDeclaration, this.getClass().getName());
         interfaceDeclaration.addSingleMemberAnnotation(Label.class, name.withQuotes());
         interfaceDeclaration.tryAddImportToParentCompilationUnit(List.class);
 
@@ -113,8 +124,8 @@ public class ApiModelGenerator extends BaseGenerator {
         List<MethodDeclaration> childContexts = clazz.getChildNodes().stream()
                 .filter(child -> child instanceof MethodDeclaration)
                 .map(MethodDeclaration.class::cast)
-                .filter(methodDeclaration -> methodDeclaration.getAnnotations().isEmpty() && methodDeclaration.getParameters().isEmpty())
-                .collect(Collectors.toList());
+                .filter(methodDeclaration -> methodDeclaration.getAnnotations().isEmpty() && methodDeclaration.getParameters().isEmpty()).toList();
+
 
         childContexts.forEach(methodDeclaration -> {
             FormattedName childName = new FormattedName(methodDeclaration.getName());
@@ -126,11 +137,19 @@ public class ApiModelGenerator extends BaseGenerator {
             } else {
                 createGetterAndSetter(interfaceDeclaration, childName, type);
             }
+
+            if (!childName.getOriginal().equalsIgnoreCase(childName.getName()) || childName.getOriginal().contains("get") || childName.getOriginal().contains("set")) {
+                explicitNameMapping.add(childName);
+            }
         });
+
+        if (explicitNameMapping.size() > 0 || extendsModel != null) {
+            generatedAnnotation.addPair("\n\tcomments", QUOTES + "REQUIRES_SPECIAL_MAPPING" + QUOTES);
+        }
 
 //        createGetterAndSetter(interfaceDeclaration, new FormattedName("FileName"), "String");
 //        createGetterAndSetter(interfaceDeclaration, new FormattedName("SourceCode"), "String");
-        return Collections.singletonMap(name, compilationUnit);
+        return Collections.singletonMap(name, new ModelDto(compilationUnit, explicitNameMapping, extendsModel));
     }
 
     public Comment generateComment(ClassOrInterfaceDeclaration clazz) {
